--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,21 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+# Common Windows files
+*.txt eol=crlf
+*.TXT eol=crlf
+*.bat eol=crlf
+*.BAT eol=crlf
+*.cmd eol=crlf
+*.CMD eol=crlf
+
+# Common Linux files
+*.sh eol=lf
+Makefile eol=lf
+
+# Common Visual Studio Files
+*.sln eol=crlf
+*.vcproj eol=crlf
+*.vcxproj eol=crlf
+*.vcxproj.filters eol=crlf
