Test command line

--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@
 *.BAT eol=crlf
 *.cmd eol=crlf
 *.CMD eol=crlf
+# Might contain binary data but should try to be displayed as text...
 *.csv -text
 *.CSV -text
 # Reg files are UTF-16 and this might cause problems...
@@ -38,6 +39,17 @@ Makefile eol=lf
 *.vcproj eol=crlf
 *.vcxproj eol=crlf
 *.vcxproj.filters eol=crlf
+*.rc eol=crlf
+*.res eol=crlf
+*.resx eol=crlf
+
+# LaTeX
+*.tex eol=crlf
+*.TEX eol=crlf
+*.bib eol=crlf
+*.BIB eol=crlf
+*.lyx eol=crlf
+*.LYX eol=crlf
 
 # Seanet
 *.v4log binary
@@ -45,6 +57,7 @@ Makefile eol=lf
 *.userver binary
 
 # MOOS
+# Might contain binary data but should try to be displayed as text...
 *.alog -text
 
 #
