--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
             - Hello
          skip_cleanup: true
          overwrite: true
-         draft: true
+#         draft: true
          prerelease: true
 #         on:
 #            tags: true
@@ -36,7 +36,7 @@ jobs:
 #         body: Blabla\nXD
          skip_cleanup: true
          overwrite: true
-         draft: true
+#         draft: true
          prerelease: true
 #         on:
 #            tags: true
