--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
          file:
             - Release\Hello.exe
          body: 
-            "    One paragraph only...\n\\n<br/><hr/>==0==       12     3    4      ""    2222222"
+            "One paragraph only"
          skip_cleanup: true
          overwrite: true
 #         draft: true
