--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ jobs:
             - Hello
          skip_cleanup: true
          overwrite: true
-         draft: true
+#         draft: true
          prerelease: true
          on:
-            tags: false
+            tags: true
 
    - name: "Windows"
      os: windows
@@ -38,7 +38,7 @@ jobs:
          body: "    One paragraph only"
          skip_cleanup: true
          overwrite: true
-         draft: true
+#         draft: true
          prerelease: true
          on:
-            tags: false
+            tags: true
