--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,12 @@ jobs:
      os: linux
      dist: bionic
      compiler: gcc
+     env:
+       - TRAVIS_TAG="autotagname"
      script: cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . --parallel && ./Hello 
-     before_install:
-         # https://github.com/electron-userland/electron-builder/issues/3559
-       - export TRAVIS_TAG="autotagname"
+#     before_install:
+#         # https://github.com/electron-userland/electron-builder/issues/3559
+#       - export TRAVIS_TAG="autotagname"
      deploy:
        <<: *deploy_base
        file:
@@ -34,11 +36,13 @@ jobs:
 
    - name: "Windows"
      os: windows
+     env:
+       - TRAVIS_TAG="autotagname"
      script: 
        - cmd //c "cmake . & cmake --build . --config Release --target Hello --parallel & .\Release\Hello.exe"
-     before_install:
-         # https://github.com/electron-userland/electron-builder/issues/3559
-       - export TRAVIS_TAG="autotagname"
+#     before_install:
+#         # https://github.com/electron-userland/electron-builder/issues/3559
+#       - export TRAVIS_TAG="autotagname"
      deploy:
        <<: *deploy_base
        file:
