--- a/.travis.yml
+++ b/.travis.yml
@@ -24,20 +24,20 @@ deploy: &deploy_base
 
 jobs:
   include:
-   - name: "Ubuntu 18.04"
-     os: linux
-     dist: bionic
-     compiler: gcc
-     script: cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . --parallel && ./Hello 
-     deploy:
-       <<: *deploy_base
-       file:
-            - Hello
+#   - name: "Ubuntu 18.04"
+#     os: linux
+#     dist: bionic
+#     compiler: gcc
+#     script: cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . --parallel && ./Hello 
+#     deploy:
+#       <<: *deploy_base
+#       file:
+#            - Hello
 
    - name: "Windows"
      os: windows
      install:
-       - "/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere" -products Microsoft.VisualStudio.Product.BuildTools
+       - "/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere"
        - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
        - ./vs_buildtools.exe update --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --includeRecommended | true
      script: 
