--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ jobs:
    - name: "Windows"
      os: windows
      install:
-       - "/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere"
+       - ""/c/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere" -products Microsoft.VisualStudio.Product.BuildTools"
        - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
        - ./vs_buildtools.exe update --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --includeRecommended | true
      script: 
