--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ jobs:
    - name: "Windows"
      os: windows
      install:
+#       - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
+#       - ./vs_buildtools.exe modify --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --includeRecommended --add Microsoft.VisualStudio.ComponentGroup.NativeDesktop.WinXP --add Microsoft.VisualStudio.Component.WinXP
        - start //w setupvs.bat
        - cat out.log
      script: 
@@ -45,5 +47,5 @@ jobs:
        <<: *deploy_base
        file:
             - Release\Hello.exe
-     after_deploy:
-       - choco uninstall -y visualstudio2017-workload-webbuildtools visualstudio2017-workload-netcorebuildtools visualstudio2017-workload-vctools microsoft-build-tools
+#     after_deploy:
+#       - choco uninstall -y visualstudio2017-workload-webbuildtools visualstudio2017-workload-netcorebuildtools visualstudio2017-workload-vctools microsoft-build-tools
