--- a/.travis.yml
+++ b/.travis.yml
@@ -47,5 +47,7 @@ jobs:
        <<: *deploy_base
        file:
             - Release\Hello.exe
-#     after_deploy:
+     after_deploy:
 #       - choco uninstall -y visualstudio2017-workload-webbuildtools visualstudio2017-workload-netcorebuildtools visualstudio2017-workload-vctools microsoft-build-tools
+       - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
+       - ./vs_buildtools.exe modify --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --remove Microsoft.VisualStudio.ComponentGroup.NativeDesktop.WinXP --
