--- a/.travis.yml
+++ b/.travis.yml
@@ -24,33 +24,37 @@ deploy: &deploy_base
 
 jobs:
   include:
-#   - name: "Ubuntu 18.04"
-#     os: linux
-#     dist: bionic
-#     compiler: gcc
-#     script: cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . --parallel && ./Hello 
+   - name: "Ubuntu"
+     os: linux
+     dist: bionic
+     compiler: gcc
+     services:
+       - docker
+     script:
+       - "docker run -i -v \"${PWD}:/MyProgram\" daald/ubuntu32:trusty /bin/bash -c \"linux32 --32bit i386 ls -l\""
 #     deploy:
 #       <<: *deploy_base
 #       file:
 #            - Hello
 
-   - name: "Windows"
-     os: windows
-     install:
+#   - name: "Windows"
+#     os: windows
+#     install:
+##       - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
+##       - ./vs_buildtools.exe modify --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --includeRecommended --add Microsoft.VisualStudio.ComponentGroup.NativeDesktop.WinXP --add Microsoft.VisualStudio.Component.WinXP
+#       - start //w setupvs.bat
+#       - cat out.log
+#     script: 
+#       - cmd //c "cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target Hello --parallel & .\Release\Hello.exe"
+#     deploy:
+#       <<: *deploy_base
+#       file:
+#            - Release\Hello.exe
+#     after_deploy:
+##       - choco uninstall -y visualstudio2017-workload-webbuildtools visualstudio2017-workload-netcorebuildtools visualstudio2017-workload-vctools microsoft-build-tools
 #       - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
-#       - ./vs_buildtools.exe modify --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --includeRecommended --add Microsoft.VisualStudio.ComponentGroup.NativeDesktop.WinXP --add Microsoft.VisualStudio.Component.WinXP
-       - start //w setupvs.bat
-       - cat out.log
-     script: 
-       - cmd //c "cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target Hello --parallel & .\Release\Hello.exe"
-     deploy:
-       <<: *deploy_base
-       file:
-            - Release\Hello.exe
-     after_deploy:
-#       - choco uninstall -y visualstudio2017-workload-webbuildtools visualstudio2017-workload-netcorebuildtools visualstudio2017-workload-vctools microsoft-build-tools
-       - wget "https://aka.ms/vs/15/release/vs_buildtools.exe" -O vs_buildtools.exe
-       - df
-#       - ./vs_buildtools.exe modify --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --remove Microsoft.VisualStudio.ComponentGroup.NativeDesktop.WinXP --remove Microsoft.VisualStudio.Component.WinXP
-       - rm -Rf "/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools"
-       - df
+#       - df
+##       - ./vs_buildtools.exe modify --installPath "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools" --passive --norestart --wait --remove Microsoft.VisualStudio.ComponentGroup.NativeDesktop.WinXP --remove Microsoft.VisualStudio.Component.WinXP
+#       - rm -Rf "/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools"
+#       - df
+#
