--- a/.travis.yml
+++ b/.travis.yml
@@ -24,20 +24,31 @@ deploy: &deploy_base
 
 jobs:
   include:
-   - name: "Ubuntu"
+   - name: "Ubuntu 16.04 i386 Docker"
      os: linux
      dist: bionic
      compiler: gcc
      services:
        - docker
      script:
-       - "docker run -i --rm -v \"${PWD}:/repo\" daald/ubuntu32:xenial /bin/bash -c \"linux32 --32bit i386 uname -a && mkdir -p tst && ls -l && apt-get update && apt-get -y install build-essential cmake && cd /repo && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . --parallel && ./Hello \""
+#       - "docker run -i --rm -v \"${PWD}:/mnt/repo\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 cd /mnt/repo && uname -a && mkdir -p tst && ls -l && apt-get update && apt-get -y install build-essential cmake && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello \""
+#
+       - "docker run -i --rm -v \"${PWD}:/mnt/repo\" i386/ubuntu:xenial /bin/bash << COMMANDS
+       cd /mnt/repo
+       uname -a
+       mkdir -p tst
+       ls -l
+       apt-get update
+       apt-get -y install build-essential cmake
+       cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello
+       COMMANDS"
+
        - ls -l /
        - ls -l ${PWD}
-#     deploy:
-#       <<: *deploy_base
-#       file:
-#            - Hello
+     deploy:
+       <<: *deploy_base
+       file:
+            - Hello
 
 #   - name: "Windows"
 #     os: windows
