--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
      script:
 #       - "docker run -i --rm -v \"${PWD}:/mnt/repo\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 cd /mnt/repo && uname -a && mkdir -p tst && ls -l && apt-get update && apt-get -y install build-essential cmake && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello \""
 #
-       - "docker run -i --rm -v \"${PWD}:/mnt/repo\" i386/ubuntu:xenial /bin/bash << COMMANDS
+       - "docker run -i --rm -v \"${PWD}:/mnt/repo\" daald/ubuntu32:xenial /bin/bash << COMMANDS
        cd /mnt/repo
        uname -a
        mkdir -p tst
