--- a/.travis.yml
+++ b/.travis.yml
@@ -31,20 +31,18 @@ jobs:
      services:
        - docker
      script:
-#       - "docker run -i --rm -v \"${PWD}:/repo\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 cd /repo && uname -a && mkdir -p tst && ls -l && apt-get update && apt-get -y install build-essential cmake && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello \""
+       - "docker run -i --rm -v \"${PWD}:/repo\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 uname -a && cd /repo && mkdir -p tst && ls -l && apt-get update && apt-get -y install build-essential cmake && cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello \""
 
-
-       - "docker run -i --rm -v \"${PWD}:/repo\" i386/ubuntu:xenial /bin/bash << COMMANDS
-       uname -a
-       cd /repo
-       mkdir -p tst
-       ls -l
-       apt-get update
-       apt-get -y install build-essential cmake
-       cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello
-       rm non-existent-file
-       COMMANDS"
-
+#       - "docker run -i --rm -v \"${PWD}:/repo\" i386/ubuntu:xenial /bin/bash << COMMANDS
+#       uname -a
+#       cd /repo
+#       mkdir -p tst
+#       ls -l
+#       apt-get update
+#       apt-get -y install build-essential cmake
+#       cmake -D CMAKE_BUILD_TYPE=Release . && cmake --build . && ./Hello
+#       COMMANDS"
+#
        - ls -l /
        - ls -l ${PWD}
      deploy:
