--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
        - cd ../..
        # Test program and bundle...
        - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
-       - unzip tubex_test_win.zip -y
+       - unzip -q -o tubex_test_win.zip
        - rm -Rf tubex_test_win.zip
        - cd tubex_test_win
        - rm -Rf ibex tubex ReadMe.txt
@@ -61,6 +61,11 @@ jobs:
      os: windows
      before_install: 
        - choco install -y winflexbison
+         # Use x86 CMake version...
+       - choco uninstall -y cmake.install
+       - wget https://cmake.org/files/v3.15/cmake-3.15.5-win32-x86.msi --no-check-certificate -nv
+       - cmd //c "cmake-3.15.5-win32-x86.msi /qb-! /norestart ALLUSERS=1"
+       - cmd //c "refreshenv.cmd
      script: 
        - git clone -b develop https://github.com/ibex-team/ibex-lib.git
        - cd ibex-lib
