--- a/.travis.yml
+++ b/.travis.yml
@@ -58,20 +58,19 @@ jobs:
        - choco uninstall -y cmake.install
        - wget https://cmake.org/files/v3.15/cmake-3.15.5-win32-x86.msi --no-check-certificate -nv
        - cmd //c "cmake-3.15.5-win32-x86.msi /qb-! /norestart ALLUSERS=1"
-       - cmd //c "refreshenv.cmd"
      script: 
        - git clone -b develop https://github.com/ibex-team/ibex-lib.git
        - cd ibex-lib
        - mkdir build ; cd build
-       - cmake -G "Visual Studio 15" -A Win32 -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC" -D CMAKE_C_FLAGS="-fPIC" -D INTERVAL_LIB=filib ..
-       - cmake --build . --config Release --target install
+       - cmd //c "refreshenv.cmd & cmake -G "Visual Studio 15" -A Win32 -D CMAKE_INSTALL_PREFIX="../../ibex" -D CMAKE_CXX_FLAGS="-fPIC" -D CMAKE_C_FLAGS="-fPIC" -D INTERVAL_LIB=filib .."
+       - cmd //c "refreshenv.cmd & cmake --build . --config Release --target install"
        - cd ../..
        - git clone -b dev https://github.com/lebarsfa/tubex-lib
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
-       - cmake -G "Visual Studio 15" -A Win32 -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" ..
-       - cmake --build . --config Release --target install
+       - cmd //c "refreshenv.cmd & cmake -G "Visual Studio 15" -A Win32 -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" .."
+       - cmd //c "refreshenv.cmd & cmake --build . --config Release --target install"
        - cd ../..
        # Test program and bundle...
        - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
@@ -84,8 +83,8 @@ jobs:
        - cd ..
        - 7z a -y tubex_test_win_vc15.zip tubex_test_win
        - cd tubex_test_win/test
-       - cmake -G "Visual Studio 15" -A Win32 .
-       - cmake --build . --config Release
+       - cmd //c "refreshenv.cmd & cmake -G "Visual Studio 15" -A Win32 ."
+       - cmd //c "refreshenv.cmd & cmake --build . --config Release"
        - cmd //c "Release\my_project.exe"
        - cd ../..
      deploy:
